--- a/CheapMC/index.html
+++ b/CheapMC/index.html
@@ -10,13 +10,14 @@
         href="https://cdn.jsdelivr.net/npm/docsify/lib/themes/vue.css">
 </head>
 <body>
-  <div id="app"></div>
+  <div id="app">Please wait...</div>
 
   <script>
     window.$docsify = {
       name: 'CheapMC/CheapDesign',
       loadSidebar: true,
-      search: 'auto'
+      search: 'auto',
+      basePath: '/mein-projekt/'
     }
   </script>
 
