Fix formatting in index.html for Docsify config

--- a/CheapMC/index.html
+++ b/CheapMC/index.html
@@ -16,8 +16,7 @@
     window.$docsify = {
       name: 'CheapMC/CheapDesign',
       loadSidebar: true,
-      search: 'auto',
-      basePath: '/mein-projekt/'
+      search: 'auto'
     }
   </script>
 
