Add basePath to Docsify configuration

--- a/CheapMC/index.html
+++ b/CheapMC/index.html
@@ -16,7 +16,8 @@
     window.$docsify = {
       name: 'CheapMC/CheapDesign',
       loadSidebar: true,
-      search: 'auto'
+      search: 'auto',
+      basePath: '/wiki/CheapMC/'
     }
   </script>
 
