Added new languages

--- a/CheapMC/en/index.html
+++ b/CheapMC/en/index.html
@@ -16,7 +16,7 @@
     window.$docsify = {
       name: 'CheapMC/CheapDesign',
       loadSidebar: true,
-      search: 'auto'
+      search: 'auto',
     }
   </script>
 
